--- a/AlumnesPractica/register.html
+++ b/AlumnesPractica/register.html
@@ -96,7 +96,7 @@
           <div class="col">
             <label for="passwordc">Repetir contrasenya</label>
             <input type="password" class="form-control" id="passwordc" name="passwordc"
-              placeholder=" Repetir contrasenya" required>
+              placeholder=" Repetir contrasenya">
           </div>
         </div>
 
